--- a/app/views/devise/mailer/invitation_instructions.text.erb
+++ b/app/views/devise/mailer/invitation_instructions.text.erb
@@ -2,5 +2,4 @@ Hello,
 
 You've been invited to join.
 
-Accept here: <%= accept_administrator_invitation_url(@resource, invitation_token: @token) %>
-
+Accept here: <%= accept_invitation_url(@resource, invitation_token: @token) %>
