--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,4 +1,4 @@
-<% frontend_base = ENV.fetch('FRONTEND_URL', 'https://your-frontend.example.com') %>
+<% frontend_base = ENV.fetch('FRONTEND_URL', 'http://localhost:3001') %>
 <% reset_link = URI.join(frontend_base + '/', "reset-password?reset_password_token=#{@token}&email=#{CGI.escape(@resource.email)}").to_s %>
 
 <p>Hello <%= @resource.try(:first_name) || @resource.email %>,</p>
