sendgrid-API:update email subject and add team signature

--- a/app/views/devise/mailer/invitation_instructions.html.erb
+++ b/app/views/devise/mailer/invitation_instructions.html.erb
@@ -19,3 +19,6 @@
 
 <p>If you don't want to accept this invitation, please ignore this email.</p>
 <p>Your account won't be created until you access the link above and set your password.</p>
+
+<p>Thanks,<br>
+The On2Door Team</p>
